# shanon_mcp

./: README.md  main.py  pyproject.toml
mcp-server-py/: BACKEND.md  main.py  pyproject.toml  temporal_client.py
