[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon-mcp"
version = "0.1.0"
description = "Shannon Pentest MCP Server — Autonomous pentesting tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.1.0",
    "python-dotenv>=1.0.0",
    "temporalio>=1.7.0",
    "httpx>=0.27.0",
]
