[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon-mcp"
version = "1.0.0"
description = "Shannon Zero-Config Pentest MCP Server — Just give a URL, get a pentest report"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]
